Bug 116113 - Assertion failure in GlyphPage::setGlyphDataForIndex: (!glyph || fontData == m_fontDataForAllGlyphs)
Summary: Assertion failure in GlyphPage::setGlyphDataForIndex: (!glyph || fontData == ...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Text (show other bugs)
Version: 528+ (Nightly build)
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Andreas Kling
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2013-05-14 11:41 PDT by Andreas Kling
Modified: 2013-05-14 13:22 PDT (History)
2 users (show)

See Also:


Attachments
Proposed patch (4.77 KB, patch)
2013-05-14 11:43 PDT, Andreas Kling
mitz: review+
Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Andreas Kling 2013-05-14 11:41:23 PDT
<rdar://problem/13833790>
Comment 1 Andreas Kling 2013-05-14 11:43:33 PDT
Created attachment 201737 [details]
Proposed patch
Comment 2 Andreas Kling 2013-05-14 13:22:24 PDT
Committed r150085: <http://trac.webkit.org/changeset/150085>